# exercicio-github-actions

./: .gitignore  README.md  main.py  pyproject.toml  test_get_users.py
.github/workflows/: testworkflow.yml
