[tool.poetry]
name = "exercicio-github-actions"
version = "1.0"
description = "exercicio - cultura e pratica devops"
authors = ["Alexandre Mariano <1546125@sga.pucminas.br>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
flask = "^3.0.3"
httpx = "^0.27.0"
pytest = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
